# project1

./: Dockerfile  compose.yaml  docs.md  readme.md
src/: card.py  deck.py  pyproject.toml  server.py  test.sh
src/ui/: Api.js  App.js  Card.js  Dockerfile  DrawButton.js  Hand.js  index.html  main.js  package-lock.json  package.json  style.css
